# coinmax

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: coinbase_pro.rs  mod.rs
src/commands/: mod.rs  price.rs  stats.rs
