[package]
name = "coinmax"
version = "0.1.0"
authors = ["Handola"]
edition = "2018"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serenity = "0.9.0-rc.2"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"